# genpdf-rs

./: Cargo.toml
examples/: demo.rs  images.rs
src/: elements.rs  fonts.rs  lib.rs  render.rs  style.rs  wrap.rs
src/elements/: codeblock.rs  images.rs
tests/: pdf.rs
